# pathfinder

./: .env.production.template  .env.secure.template  .gitignore  .gitignore.backup  .gitleaks.toml  .pre-commit-config.yaml  APPLICATION_OPTIMIZATIONS.md  AUTH0_FIX_EXECUTE_NOW.md  AUTH0_FIX_VERIFICATION_PLAN.md  CI_CD_FAILURE_RESOLUTION.md  CI_CD_FAILURE_RESOLUTION_SUMMARY.md  CI_CD_FIX_SUMMARY.md  CI_CD_PAUSE_RESUME_FIX.md  CI_CD_TROUBLESHOOTING.md  CONTRIBUTING.md  COST_OPTIMIZATION_PLAN.md  DASHBOARD_FIX_COMPLETE.md  DASHBOARD_FIX_SUMMARY.md  DAY1_COMPLETION_SUMMARY.md  DAY2_COMPLETION_SUMMARY.md  DAY3_COMPLETION_SUMMARY.md  DAY4_COMPLETION_SUMMARY.md  DAY5_COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.sh  DEPLOYMENT_STATUS.md  Dockerfile.fix  E2E_IMPLEMENTATION_SUMMARY.md  E2E_TESTING.md  EMERGENCY_SECURITY_REMEDIATION.md  EXECUTE_SECURITY_FIXES.md  FINAL_DEPLOYMENT_GUIDE.md.bak  FINAL_DEPLOYMENT_STATUS.md  FINAL_SECURITY_ASSESSMENT.md  FRONTEND_AUTH0_FIX_SUMMARY.md  IMMEDIATE_AUTH0_MANUAL_FIX.md  IMMEDIATE_SECURITY_FIX.sh  LICENSE  LLM_DEPLOYMENT_READY.md  LLM_ORCHESTRATION_DEPLOYMENT_GUIDE.md  (+101 more)
backend/: .dockerignore  .env.test  CI_CD_FAILURE_ROOT_CAUSE_ANALYSIS.md  Dockerfile  Dockerfile.prod  FAMILY_INVITATION_STATUS.md  README_DEVELOPMENT.md  alembic.ini  complete_cosmos_migration.py  comprehensive_e2e_validation.py  comprehensive_fixer_v2.py  comprehensive_fixer_v3.py  comprehensive_ruff_fixer.py  comprehensive_syntax_fixer.py  coverage.json  day1_completion_analysis.py  day1_completion_report.py  day3_ai_cost_management_results_20250629_121011.json  day3_ai_cost_management_results_20250629_121240.json  day3_e2e_ai_integration_results_20250629_125733.json  day3_e2e_ai_integration_results_20250629_130806.json  day3_e2e_ai_integration_results_20250629_130930.json  day3_readiness_results.json  day4_performance_mock_results_20250629_141531.json  day4_security_audit_results_20250629_133846.json  day4_security_audit_results_20250629_134108.json  day4_security_audit_results_20250629_134641.json  day4_security_audit_results_20250629_141546.json  debug_db_script.py  debug_db_test.py  debug_tables.py  deploy.sh  enhanced_validation.py  fix_ai_tasks_alt_tests.py  fix_ai_tests.py  fix_ai_unit_tests.py  fix_environment.py  function_app.py  host.json  implementation_summary.py  (+47 more)
backend/alembic/: env.py
backend/alembic/versions/: 20250608_add_onboarding_fields.py  20250608_add_user_role_field.py  20250609_add_ai_integration_tables.py  52376553099b_fix_user_name_column_consolidation.py  5ccfdeebef7a_merge_ai_integration_with_existing_head.py  63ee57d6765a_merge_heads.py  81a7b1a8b036_initial_migration_with_guid_support.py  add_family_invitations_table_20250528.py  e4171dc63af8_initial_migration.py
backend/app/: main.py
backend/app/api/: admin.py  admin_broken.py  ai_cost.py  analytics.py  assistant.py  auth.py  consensus.py  consensus_backup.py.broken  consensus_fixed.py  coordination.py  coordination.py.broken  exports.py  exports_broken.py.broken  families.py  maps.py  (+17 more)
backend/architectural_repair_backup/: cosmos_unified.py
backend/core/: __init__.py  config.py  errors.py  security.py
backend/domain/: __init__.py
backend/migration_backup/: cache.db
backend/models/: __init__.py  documents.py  schemas.py
backend/repositories/: __init__.py  cosmos_repository.py
backend/services/: __init__.py  assistant_service.py  collaboration_service.py  family_service.py  itinerary_service.py  notification_service.py  realtime_service.py  trip_service.py
backend/tests/: conftest.py  test_ai_service.py  test_ai_service_unit.py  test_ai_tasks_alt_simple.py  test_api_contract_validation.py  test_api_modules_comprehensive.py  test_audit.py  test_auth.py  test_auth_service_backup_simple.py.disabled  test_auth_unit.py  test_auth_unit_fixed.py  test_cache_alternatives.py  test_cache_service.py  test_comprehensive_integration.py  test_config_utils.py  test_coordination_automation.py.disabled  test_cost_monitoring_simple.py  test_csrf_auth.py  test_debug_auth.py  test_debug_auth_v2.py  test_e2e.py  test_enhanced_chat_simple.py  test_environment.py  test_file_service.py  test_file_service_simple.py  test_integration.py  test_jwt_auth.py  test_kink_container_simple.py  test_load_performance.py  test_logging_utils.py  test_magic_polls_e2e.py  test_minimal_auth.py  test_monitoring.py  test_performance.py  test_performance_utils.py  test_repository.py  test_security_utils.py  test_service_modules_comprehensive.py  test_simple_models.py  test_trip_integration_comprehensive.py  (+6 more)
(+603 files in other folders)
