[project]
name = "pathfinder"
version = "1.0.0"
description = "AI-Powered Group Trip Planner"
authors = [
    {name = "Pathfinder Team", email = "contact@pathfinder.com"}
]
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.9"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py39"
exclude = [
    "node_modules",
    ".git",
    "dist"
]

[tool.ruff.lint]
# Enable high-value rulesets
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # bugbear
    "Q",  # quotes
]
ignore = [
    "E501",  # handled by black
    "B008",  # FastAPI Depends() in function defaults is intentional
    "E402",  # Module level import not at top of file - common in conditional imports
    "F403",  # Star imports used for model registration
    "F401",  # Unused imports in __init__.py files for convenience
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = []
explicit_package_bases = true
namespace_packages = true
# Fix the module path conflicts by setting the backend directory as the root
files = ["backend/app"]

[tool.importlinter]
contract_files = ["importlinter_contracts/*.toml"]
